src/styles/bombs.scss
div.bombs-container {
	text-align: left;
	margin-left: 26vw;
	margin-right: 26vw;
	height: 70%;

	div.bomb {
		position: absolute;
		line-height: 10vh;
		height: 10vh;
		width: 10vh;
		margin-right: 10vh;
		display: inline-block;
		border-radius: 50%;
		font-weight: bold;
		font-size: 3vh;
		color: white;
		text-align: center;
		cursor: pointer;
		svg {
			max-width:100%;
		}
		.countdown {
			display: block;
			position: absolute;
			height: 87%;
			pointer-events: none;
			width: 72%;
			bottom:0;
			left:0;
		}
		&.draggable-source--is-dragging {
			opacity: 0;
		}
		&.disabled {
			display: none;
		}
	}
}

